docs(auth): 更新认证服务模块的API文档注释
- 为GlobalExceptionAdvice添加详细的异常处理说明和作者信息
- 为GlobalResponseAdvice补充响应包裹处理和操作日志记录的功能描述
- 为MscPermDeclare注解增加权限声明的详细说明和使用注意事项
- 为ResponseAdviceIgnore注解添加跳过响应包裹的功能描述
- 为AuthServiceAutoConfiguration增加自动装配的核心组件说明
- 为AuthServiceProperties补充配置属性的详细描述和新增日志缓存限制字段
- 为ActionLog枚举添加操作日志级别的完整说明和使用关联
- 为AuthServiceConstants增加认证服务常量的用途说明
- 为AuthType枚举补充授权类型的严格程度说明
- 为TokenInvalidType增加非法Token类型的标识说明
- 为TokenType枚举添加Token安全等级的权限判定说明
- 为UserType枚举完善用户类型的权限匹配和管理关系说明
- 为各个Token相关异常类添加抛出时机和HTTP状态码映射说明
- 为AuthServiceFilter补充认证授权过滤器的完整处理流程
- 为AuthCriticalLogStorage接口增加关键日志存储的实现说明
- 为RPC实现类添加远程调用接口的功能描述和参数编码修复